Thu Dec 19 08:41:02 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* HACKING,configure.ac,tests/runtest.in: Automatically probe for and
	  hook in eatmydata to the testsuite using the wrapper script it now
	  includes.

Thu Dec 19 08:22:16 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* HACKING: Update website update info.

Mon Dec 16 10:40:12 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/msetcmp.cc: Fix sense of reverse parameter to
	  Enquire::set_sort_by_relevance_then_value.  Reported by "boomboo" on
	  IRC.
	* tests/api_db.cc: Fix testcase sortrel1.

Mon Dec 16 09:34:14 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Improve reporting of GCC version.

Fri Dec 13 08:45:00 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* weight/bm25weight.cc: Fix case where (k1 == 0 || b == 0) but k2 != 0.
	  Reported by "boomboo" on IRC.
	* tests/api_weight.cc: Add regression test bm25weight5.

Fri Dec 13 08:28:48 GMT 2013  Olly Betts <olly@survex.com>

	* AUTHORS: Update missed from 1.2.16.

Wed Dec 04 05:14:35 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/Makefile.am: doxygen no longer generates any GIF files, so
	  stop trying to ship or install them.

Wed Dec 04 02:53:35 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,docs/doxygen_api.conf.in: Use doxygen 1.8.5 to generate
	  docs for releases.

Wed Dec 04 02:22:55 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS,include/xapian/enquire.h,include/xapian/keymaker.h:
	  Improve how descriptions of deprecated features appear in the API
	  documentation.

Tue Dec 03 23:08:06 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Final update for 1.2.16.

Tue Dec 03 23:04:16 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Clarify version of MSVCRT which we require for mingw.
