@@ -70,8 +70,9 @@ class FlintVersion {
 	return std::string(buf, 36);
     }
 
+#if 0 // Unused currently.
     /// Set the UUID from 16 byte binary value @a data.
-    void set_uuid(void * data) {
+    void set_uuid(const void * data) {
 	std::memcpy(uuid, data, 16);
     }
 
@@ -82,6 +83,7 @@ class FlintVersion {
     bool set_uuid_string(const std::string & s) {
 	return uuid_parse(s.c_str(), uuid);
     }
+#endif
 };
 
 #endif
